# brain

./: .gitattributes  CMakeLists.txt  LICENSE  README.md  brain.cpp  brain.natvis  build.bat  build.sh
.devcontainer/: Dockerfile  devcontainer.json
lib/: AnswerTree.cpp  AnswerTree.h  BMath.h  Context.cpp  Context.h  ContextCompiler.cpp  ContextCompiler.h  ContextCreativity.cpp  ContextCreativity.h  ContextObject.cpp  ContextObject.h  Dot.h  DotArray.h  DotFixedArray.h  FunctionGenerator.h  Functor.h  HashCalculator.cpp  HashCalculator.h  Letter.h  LetterView.h  Mask.h  Neocortex.cpp  Neocortex.h  Projector.cpp  Projector.h  ScalarFunction.h  Sentence.cpp  Sentence.h  ShuffleIterator.h  VectorFunction.cpp  VectorFunction.h  Word.h
paper/: CMakeLists.txt  brain.bib  brain.tex
test/: AnswerTreeTest.cpp  CompilerTest.cpp  ContextCreativityTest.cpp  ContextTest.cpp  DotsUnitTest.cpp  FunctionGeneratorTest.cpp  FunctorTest.cpp  HashTest.cpp  LetterTest.cpp  LetterViewTest.cpp  MathUnitTest.cpp  NewcortexTest.cpp  ProjectorTest.cpp  ScalarFunctionUnitTest.cpp  SentenseTest.cpp  ShuffleTest.cpp  TestTools.cpp  TestTools.h  VectorFunctionUnitTest.cpp
vsext/: BinaryVisualizer.sln  README.md  nuget.config
vsext/dll/: BinaryVisualizer.aps  BinaryVisualizer.def  BinaryVisualizer.natvis  BinaryVisualizer.rc  BinaryVisualizer.vcxproj  BinaryVisualizer.vcxproj.filters  BinaryVisualizer.vsdconfigxml  ChildVisualizer.cpp  ChildVisualizer.h  Resource.h  RootVisualizer.cpp  RootVisualizer.h  _EntryPoint.cpp  _EntryPoint.h  dllmain.cpp  dllmain.h  packages.config  stdafx.cpp  (+3 more)
(+4 files in other folders)
